src/parser/snapshots/hebi4__parser__tests__loops.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Loop(
            [
                StmtExpr(
                    Continue,
                ),
                StmtExpr(
                    Break,
                ),
            ],
        ),
    ],
)
