src/parser/snapshots/hebi4__parser__tests__nil.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            Nil,
        ),
    ],
)
