src/parser/snapshots/hebi4__parser__tests__object.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Var(
            Ident(
                "empty",
            ),
            Object(
                [],
            ),
        ),
        Var(
            Ident(
                "single_arg",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_arg_tc",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_tc",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_arg_inline",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_arg_inline_tc",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_mixed",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_mixed_tc",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_mixed2",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_arg_mixed2_tc",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "string_key",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "string_key_tc",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "string_key_multi",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "string_key_multi_tc",
            ),
            Object(
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int(
                            1,
                        ),
                    ),
                ],
            ),
        ),
    ],
)
