src/parser/snapshots/hebi4__parser__tests__postfix.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Var(
            Ident(
                "use",
            ),
            GetVar(
                Ident(
                    "x",
                ),
            ),
        ),
        Var(
            Ident(
                "field",
            ),
            GetField(
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Ident(
                    "a",
                ),
            ),
        ),
        Var(
            Ident(
                "index",
            ),
            GetIndex(
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int32(
                    0,
                ),
            ),
        ),
        Var(
            Ident(
                "combined",
            ),
            GetIndex(
                GetField(
                    GetVar(
                        Ident(
                            "x",
                        ),
                    ),
                    Ident(
                        "a",
                    ),
                ),
                Int32(
                    0,
                ),
            ),
        ),
        Var(
            Ident(
                "combined_inverse",
            ),
            GetField(
                GetIndex(
                    GetVar(
                        Ident(
                            "x",
                        ),
                    ),
                    Int32(
                        0,
                    ),
                ),
                Ident(
                    "a",
                ),
            ),
        ),
        Var(
            Ident(
                "many",
            ),
            GetIndex(
                GetIndex(
                    GetIndex(
                        GetField(
                            GetField(
                                GetField(
                                    GetVar(
                                        Ident(
                                            "x",
                                        ),
                                    ),
                                    Ident(
                                        "a",
                                    ),
                                ),
                                Ident(
                                    "b",
                                ),
                            ),
                            Ident(
                                "c",
                            ),
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    Int32(
                        1,
                    ),
                ),
                Int32(
                    2,
                ),
            ),
        ),
    ],
)
