src/parser/snapshots/hebi4__parser__tests__service.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            SetVar(
                None,
                GetVar(
                    Ident(
                        "svc",
                    ),
                ),
                Call(
                    GetField(
                        GetVar(
                            Ident(
                                "http",
                            ),
                        ),
                        Ident(
                            "service",
                        ),
                    ),
                    [],
                ),
            ),
        ),
        StmtExpr(
            Call(
                GetField(
                    GetVar(
                        Ident(
                            "svc",
                        ),
                    ),
                    Ident(
                        "GET",
                    ),
                ),
                [
                    Str(
                        "/hello/:name",
                    ),
                    FuncAnon(
                        None,
                        Block(
                            [
                                StmtExpr(
                                    Call(
                                        GetField(
                                            GetVar(
                                                Ident(
                                                    "res",
                                                ),
                                            ),
                                            Ident(
                                                "status",
                                            ),
                                        ),
                                        [
                                            Int(
                                                200,
                                            ),
                                        ],
                                    ),
                                ),
                                StmtExpr(
                                    Call(
                                        GetField(
                                            GetVar(
                                                Ident(
                                                    "res",
                                                ),
                                            ),
                                            Ident(
                                                "header",
                                            ),
                                        ),
                                        [
                                            Str(
                                                "Content-Type",
                                            ),
                                            Str(
                                                "text/plain",
                                            ),
                                        ],
                                    ),
                                ),
                                StmtExpr(
                                    SetVar(
                                        None,
                                        GetVar(
                                            Ident(
                                                "body",
                                            ),
                                        ),
                                        Call(
                                            GetVar(
                                                Ident(
                                                    "fmt",
                                                ),
                                            ),
                                            [
                                                Str(
                                                    "Hello, {name}!",
                                                ),
                                                Object(
                                                    [
                                                        ObjectEntry(
                                                            Str(
                                                                "name",
                                                            ),
                                                            GetField(
                                                                GetField(
                                                                    GetVar(
                                                                        Ident(
                                                                            "req",
                                                                        ),
                                                                    ),
                                                                    Ident(
                                                                        "params",
                                                                    ),
                                                                ),
                                                                Ident(
                                                                    "name",
                                                                ),
                                                            ),
                                                        ),
                                                    ],
                                                ),
                                            ],
                                        ),
                                    ),
                                ),
                                StmtExpr(
                                    Call(
                                        GetField(
                                            GetVar(
                                                Ident(
                                                    "res",
                                                ),
                                            ),
                                            Ident(
                                                "body",
                                            ),
                                        ),
                                        [
                                            GetVar(
                                                Ident(
                                                    "body",
                                                ),
                                            ),
                                        ],
                                    ),
                                ),
                            ],
                        ),
                        [
                            Ident(
                                "req",
                            ),
                            Ident(
                                "res",
                            ),
                        ],
                    ),
                ],
            ),
        ),
        StmtExpr(
            Call(
                GetField(
                    GetVar(
                        Ident(
                            "http",
                        ),
                    ),
                    Ident(
                        "serve",
                    ),
                ),
                [
                    GetVar(
                        Ident(
                            "svc",
                        ),
                    ),
                ],
            ),
        ),
    ],
)
